[package]
name = "zero_to_prod"
version = "0.1.0"
authors = ["RyanFrazier <rfrazier716@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "=4.0.0-beta.5"
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
actix-rt = "2.2.0"
reqwest = "0.11.3"
tokio = "1.6.0"
mongodb = "1.2.1"