[package]
name = "zero_to_prod"
version = "0.1.0"
authors = ["RyanFrazier <rfrazier716@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
# The Framework we'll be using
warp="0.3.0"
reqwest = "0.11.3"

# Tokio async runtime is required for Warp
tokio = {version="1.6.0", features=["full"]}

# Have to use the beta mongo-db version to use a tokio runtime >1.0
mongodb = "2.0.0-beta"

# Error Handling
thiserror = "1.0.25"

# Tracing
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
