[package]
name = "mongo_warp"
version = "0.1.0"
authors = ["RyanFrazier <rfrazier716@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mongo_warp"

[dependencies]
# The Framework we'll be using
warp="0.3.0"
reqwest = "0.11.3"
tokio = {version="1.6.0", features=["full"]}
mongodb = "2.0.0-beta"

# Tracing
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

# Other
thiserror = "1.0.25"
confy = "0.4.0"
serde = "1.0.126"
config = "0.10"
lazy_static = "1.4.0"